--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "reselect": "^4.0.0"
   }
 }
