--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATA_SOURCE=ws://192.168.0.53:3000/data-source
+DATA_SOURCE=ws://localhost:3000/data-source
 CONTROLLER=ws://192.168.0.53:3000/controller
